Applied rewrite-plugin Java 17